--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
         </main>
 
         <footer class="schedule-footer">
-            <p class="note">Maximize your learning potential.</p>
+            <p class="note">Schedule not complete.</p>
         </footer>
     </div>
 
     <script src="schd.js"></script>
 </body>
 </html>
+
