--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <td class="col-course">GRAPHICS & VISUAL COMPUTING</td>
                     </tr>
                     <tr id="hci-row" class="schedule-item mwf">
-                        <td class="col-day">Monday</td>
+                        <td class="col-day">M-W-F</td>
                         <td class="col-time time-8pm">8:00 PM – 9:00 PM</td>
                         <td class="col-course">HUMAN COMPUTER INTERACTION</td>
                         <td class="col-prof">Prof. Pastera</td>
@@ -73,4 +73,5 @@
     <script src="schd.js"></script>
 </body>
 </html>
+
 
