--- a/index.html
+++ b/index.html
@@ -61,17 +61,34 @@
                             </a>
                         </td>
                     </tr>
+                    
+                    <tr id="cs-row" class="schedule-item tth">
+                        <td class="col-day">T-TH</td>
+                        <td class="col-time time-6pm">6:00 PM – 7:00 PM</td>
+                        <td class="col-course">COMPUTATIONAL SCIENCE</td>
+                        <td class="col-prof" rowspan="2">Prof. Carreon</td>
+                        <td class="col-link" rowspan="2">
+                            <a href="https://classroom.google.com/c/ODIwNTM1MTY3OTQ3?cjc=ij42qrvq" target="_blank" class="meet-link google-classroom">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 3H4c-1.1 0-1.99.9-1.99 2L2 21l2-2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 15H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm1-7H4V5h16v3z"/></svg>
+                                Join Classroom
+                            </a>
+                        </td>
+                    </tr>
+                    <tr id="ca-row" class="schedule-item tth">
+                        <td class="col-day">T-TH</td>
+                        <td class="col-time time-7pm">7:00 PM – 8:00 PM</td>
+                        <td class="col-course">COMPUTER ARCHITECTURE</td>
+                    </tr>
+                    
                 </tbody>
             </table>
         </main>
 
         <footer class="schedule-footer">
-            <p class="note">Schedule not complete.</p>
+            <p class="note">Maximize your learning potential.</p>
         </footer>
     </div>
 
     <script src="schd.js"></script>
 </body>
 </html>
-
-
