--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                         <td class="col-day">M-W-F</td>
                         <td class="col-time time-6pm">6:00 PM – 7:00 PM</td>
                         <td class="col-course">SOFTWARE ENGINEERING 2</td>
-                        <td class="col-prof" rowspan="2">Prof. Catama</td>
-                        <td class="col-link" rowspan="2">
+                        <td class="col-prof">Prof. Catama</td>
+                        <td class="col-link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"/></svg>
                                 Join Meeting
@@ -48,6 +48,13 @@
                         <td class="col-day">M-W-F</td>
                         <td class="col-time time-7pm">7:00 PM – 8:00 PM</td>
                         <td class="col-course">GRAPHICS & VISUAL COMPUTING</td>
+                        <td class="col-prof">Prof. Catama</td>
+                        <td class="col-link">
+                            <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"/></svg>
+                                Join Meeting
+                            </a>
+                        </td>
                     </tr>
                     <tr id="hci-row" class="schedule-item mwf">
                         <td class="col-day">M-W-F</td>
@@ -66,8 +73,8 @@
                         <td class="col-day">T-TH</td>
                         <td class="col-time time-6pm">6:00 PM – 7:00 PM</td>
                         <td class="col-course">COMPUTATIONAL SCIENCE</td>
-                        <td class="col-prof" rowspan="2">Prof. Carreon</td>
-                        <td class="col-link" rowspan="2">
+                        <td class="col-prof">Prof. Carreon</td>
+                        <td class="col-link">
                             <a href="https://classroom.google.com/c/ODIwNTM1MTY3OTQ3?cjc=ij42qrvq" target="_blank" class="meet-link google-classroom">
                                 <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 3H4c-1.1 0-1.99.9-1.99 2L2 21l2-2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 15H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm1-7H4V5h16v3z"/></svg>
                                 Join Classroom
@@ -78,6 +85,13 @@
                         <td class="col-day">T-TH</td>
                         <td class="col-time time-7pm">7:00 PM – 8:00 PM</td>
                         <td class="col-course">COMPUTER ARCHITECTURE</td>
+                        <td class="col-prof">Prof. Carreon</td>
+                        <td class="col-link">
+                            <a href="https://classroom.google.com/c/ODIzNzMwODY0OTc0?cjc=ydffki3f" target="_blank" class="meet-link google-classroom">
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 3H4c-1.1 0-1.99.9-1.99 2L2 21l2-2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 15H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm1-7H4V5h16v3z"/></svg>
+                                Join Classroom
+                            </a>
+                        </td>
                     </tr>
                     
                 </tbody>
@@ -85,11 +99,10 @@
         </main>
 
         <footer class="schedule-footer">
-            <p class="note">Schedule incomplete</p>
+            <p class="note">Developed by <a href="#" target="_blank" class="footer-link">Kaheldev</a></p>
         </footer>
     </div>
 
     <script src="schd.js"></script>
 </body>
 </html>
-
