--- a/index.html
+++ b/index.html
@@ -99,10 +99,11 @@
         </main>
 
         <footer class="schedule-footer">
-            <p class="note">Developed by <a href="#" target="_blank" class="footer-link">Kaheldev</a></p>
+            <p class="note">Developed by <a href="https://www.facebook.com/kaheldev" target="_blank" class="footer-link">kaheldev</a></p>
         </footer>
     </div>
 
     <script src="schd.js"></script>
 </body>
 </html>
+
