--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="schedule-app">
         <header class="schedule-header">
             <h1 class="main-title">
-                MBC - Evening Class
+                MBC Arnaiz - Evening Class
             </h1>
             <div id="status-card" class="status-card">
                 <div id="current-day" class="current-day"></div>
@@ -106,4 +106,5 @@
     <script src="schd.js"></script>
 </body>
 </html>
+
 
