--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <tr id="ca-row" class="schedule-item tth">
                         <td class="col-day">T-TH</td>
                         <td class="col-time time-7pm">7:00 PM – 8:00 PM</td>
-                        <td class="col-course">COMPUTER ARCHITECTURE</td>
+                        <td class="col-course">ARCHITECTURE AND ORGANIZATION</td>
                         <td class="col-prof">Prof. Carreon</td>
                         <td class="col-link">
                             <a href="https://classroom.google.com/c/ODIzNzMwODY0OTc0?cjc=ydffki3f" target="_blank" class="meet-link google-classroom">
@@ -106,5 +106,6 @@
     <script src="schd.js"></script>
 </body>
 </html>
+
 
 
