--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>MBC - Evening</title>
     <link rel="stylesheet" href="schd.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="img/mbc_lgoo-removebg-preview.png">
 </head>
 <body>
     <div class="schedule-app">
         <header class="schedule-header">
             <h1 class="main-title">
-                MBC Arnaiz - Evening Class
+                MBC - Evening Class
             </h1>
             <div id="status-card" class="status-card">
                 <div id="current-day" class="current-day"></div>
@@ -32,68 +33,81 @@
                     </tr>
                 </thead>
                 <tbody id="schedule-body">
+
+                    <!-- M-W-F CLASSES -->
                     <tr id="se-row" class="schedule-item mwf">
                         <td class="col-day">M-W-F</td>
-                        <td class="col-time time-6pm">6:00 PM – 7:00 PM</td>
+                        <td class="col-time">6:00 PM – 7:00 PM</td>
                         <td class="col-course">SOFTWARE ENGINEERING 2</td>
                         <td class="col-prof">Prof. Catama</td>
                         <td class="col-link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"/></svg>
                                 Join Meeting
                             </a>
                         </td>
                     </tr>
+
                     <tr id="gvc-row" class="schedule-item mwf">
                         <td class="col-day">M-W-F</td>
-                        <td class="col-time time-7pm">7:00 PM – 8:00 PM</td>
+                        <td class="col-time">7:00 PM – 8:00 PM</td>
                         <td class="col-course">GRAPHICS & VISUAL COMPUTING</td>
                         <td class="col-prof">Prof. Catama</td>
                         <td class="col-link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"/></svg>
                                 Join Meeting
                             </a>
                         </td>
                     </tr>
+
                     <tr id="hci-row" class="schedule-item mwf">
                         <td class="col-day">M-W-F</td>
-                        <td class="col-time time-8pm">8:00 PM – 9:00 PM</td>
+                        <td class="col-time">8:00 PM – 9:00 PM</td>
                         <td class="col-course">HUMAN COMPUTER INTERACTION</td>
                         <td class="col-prof">Prof. Pastera</td>
                         <td class="col-link">
                             <a href="https://meet.google.com/vzy-sjuv-xpd" target="_blank" class="meet-link">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M17 10.5V7c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1v10c0 .55.45 1 1 1h12c.55 0 1-.45 1-1v-3.5l4 4v-11l-4 4z"/></svg>
                                 Join Meeting
                             </a>
                         </td>
                     </tr>
-                    
-                    <tr id="cs-row" class="schedule-item tth">
+
+                    <!-- T-TH CLASSES (UPDATED + IAS ADDED) -->
+                    <tr id="ias-row" class="schedule-item tth">
                         <td class="col-day">T-TH</td>
-                        <td class="col-time time-7pm">7:00 PM – 8:30 PM</td>
+                        <td class="col-time">6:00 PM – 7:00 PM</td>
+                        <td class="col-course">INFORMATION ASSURANCE & SECURITY</td>
+                        <td class="col-prof">Prof. Catama</td>
+                        <td class="col-link">
+                            <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
+                                Join Meeting
+                            </a>
+                        </td>
+                    </tr>
+
+                    <tr id="ca-row" class="schedule-item tth">
+                        <td class="col-day">T-TH</td>
+                        <td class="col-time">7:00 PM – 8:00 PM</td>
                         <td class="col-course">ARCHITECTURE AND ORGANIZATION</td>
                         <td class="col-prof">Prof. Carreon</td>
                         <td class="col-link">
-                            <a href="https://classroom.google.com/c/ODIwNTM1MTY3OTQ3?cjc=ij42qrvq" target="_blank" class="meet-link google-classroom">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 3H4c-1.1 0-1.99.9-1.99 2L2 21l2-2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 15H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm1-7H4V5h16v3z"/></svg>
+                            <a href="https://classroom.google.com/c/ODIzNzMwODY0OTc0" target="_blank" class="meet-link google-classroom">
                                 Join Classroom
                             </a>
                         </td>
                     </tr>
-                    <tr id="ca-row" class="schedule-item tth">
+
+                    <tr id="cs-row" class="schedule-item tth">
                         <td class="col-day">T-TH</td>
-                        <td class="col-time time-6pm">8:30 PM – 10:00 PM</td>
+                        <td class="col-time">8:00 PM – 9:00 PM</td>
                         <td class="col-course">COMPUTATIONAL SCIENCE</td>
                         <td class="col-prof">Prof. Carreon</td>
                         <td class="col-link">
-                            <a href="https://classroom.google.com/c/ODIzNzMwODY0OTc0?cjc=ydffki3f" target="_blank" class="meet-link google-classroom">
-                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M20 3H4c-1.1 0-1.99.9-1.99 2L2 21l2-2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 15H7v-2h2v2zm4 0h-2v-2h2v2zm4 0h-2v-2h2v2zm1-7H4V5h16v3z"/></svg>
+                            <a href="https://classroom.google.com/c/ODIwNTM1MTY3OTQ3" target="_blank" class="meet-link google-classroom">
                                 Join Classroom
                             </a>
                         </td>
                     </tr>
-                    
+
                 </tbody>
             </table>
         </main>
@@ -106,8 +120,3 @@
     <script src="schd.js"></script>
 </body>
 </html>
-
-
-
-
-
