--- a/index.html
+++ b/index.html
@@ -3,107 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBC - Evening</title>
+    <title>MBC - Evening Class Schedule</title>
     <link rel="stylesheet" href="schd.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/mbc_lgoo-removebg-preview.png">
 </head>
 <body>
+
     <div class="schedule-app">
+
         <header class="schedule-header">
-            <h1 class="main-title">
-                MBC - Evening Class
-            </h1>
+            <h1 class="main-title">MBC - Evening Class</h1>
+
             <div id="status-card" class="status-card">
                 <div id="current-day" class="current-day"></div>
                 <div id="current-time-display" class="current-time"></div>
                 <div id="current-sub" class="current-sub-status"></div>
             </div>
         </header>
-        
+
         <main class="schedule-container">
             <table id="schedule-table">
                 <thead>
                     <tr>
-                        <th class="col-day">Day</th>
-                        <th class="col-time">Time Slot</th>
-                        <th class="col-course">Subject</th>
-                        <th class="col-prof">Instructor</th>
-                        <th class="col-link">Virtual Link</th>
+                        <th><span class="icon"></span> Day</th>
+                        <th><span class="icon"></span> Time</th>
+                        <th><span class="icon"></span> Subject</th>
+                        <th><span class="icon"></span> Instructor</th>
+                        <th><span class="icon"></span> Link</th>
                     </tr>
                 </thead>
+
                 <tbody id="schedule-body">
 
-                    <!-- M-W-F CLASSES -->
-                    <tr id="se-row" class="schedule-item mwf">
+                    <tr class="schedule-item mwf">
                         <td class="col-day">M-W-F</td>
                         <td class="col-time">6:00 PM – 7:00 PM</td>
                         <td class="col-course">SOFTWARE ENGINEERING 2</td>
                         <td class="col-prof">Prof. Catama</td>
                         <td class="col-link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
-                                Join Meeting
+                                <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <tr id="gvc-row" class="schedule-item mwf">
+                    <tr class="schedule-item mwf">
                         <td class="col-day">M-W-F</td>
                         <td class="col-time">7:00 PM – 8:00 PM</td>
                         <td class="col-course">GRAPHICS & VISUAL COMPUTING</td>
                         <td class="col-prof">Prof. Catama</td>
                         <td class="col-link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
-                                Join Meeting
+                                <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <tr id="hci-row" class="schedule-item mwf">
+                    <tr class="schedule-item mwf">
                         <td class="col-day">M-W-F</td>
                         <td class="col-time">8:00 PM – 9:00 PM</td>
                         <td class="col-course">HUMAN COMPUTER INTERACTION</td>
                         <td class="col-prof">Prof. Pastera</td>
                         <td class="col-link">
                             <a href="https://meet.google.com/vzy-sjuv-xpd" target="_blank" class="meet-link">
-                                Join Meeting
+                                <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <!-- T-TH CLASSES (UPDATED + IAS ADDED) -->
-                    <tr id="ias-row" class="schedule-item tth">
+                    <tr class="schedule-item tth">
                         <td class="col-day">T-TH</td>
                         <td class="col-time">6:00 PM – 7:00 PM</td>
                         <td class="col-course">INFORMATION ASSURANCE & SECURITY</td>
                         <td class="col-prof">Prof. Catama</td>
                         <td class="col-link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
-                                Join Meeting
+                                <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <tr id="ca-row" class="schedule-item tth">
+                    <tr class="schedule-item tth">
                         <td class="col-day">T-TH</td>
-                        <td class="col-time">7:00 PM – 8:00 PM</td>
+                        <td class="col-time">7:00 PM – 8:30 PM</td>
                         <td class="col-course">ARCHITECTURE AND ORGANIZATION</td>
                         <td class="col-prof">Prof. Carreon</td>
                         <td class="col-link">
                             <a href="https://classroom.google.com/c/ODIzNzMwODY0OTc0" target="_blank" class="meet-link google-classroom">
-                                Join Classroom
+                                <span class="icon svg-classroom"></span> Classroom
                             </a>
                         </td>
                     </tr>
 
-                    <tr id="cs-row" class="schedule-item tth">
+                    <tr class="schedule-item tth">
                         <td class="col-day">T-TH</td>
-                        <td class="col-time">8:00 PM – 9:00 PM</td>
+                        <td class="col-time">8:30 PM – 10:00 PM</td>
                         <td class="col-course">COMPUTATIONAL SCIENCE</td>
                         <td class="col-prof">Prof. Carreon</td>
                         <td class="col-link">
                             <a href="https://classroom.google.com/c/ODIwNTM1MTY3OTQ3" target="_blank" class="meet-link google-classroom">
-                                Join Classroom
+                                <span class="icon svg-classroom"></span> Classroom
                             </a>
                         </td>
                     </tr>
@@ -115,6 +115,7 @@
         <footer class="schedule-footer">
             <p class="note">Developed by <a href="https://www.facebook.com/kaheldev" target="_blank" class="footer-link">kaheldev</a></p>
         </footer>
+
     </div>
 
     <script src="schd.js"></script>
