--- a/index.html
+++ b/index.html
@@ -36,72 +36,72 @@
 
                 <tbody id="schedule-body">
 
-                    <tr class="schedule-item mwf">
-                        <td class="col-day">M-W-F</td>
-                        <td class="col-time">6:00 PM – 7:00 PM</td>
-                        <td class="col-course">SOFTWARE ENGINEERING 2</td>
-                        <td class="col-prof">Prof. Catama</td>
-                        <td class="col-link">
+                    <tr class="schedule-item mwf" id="se-row">
+                        <td class="col-day" data-label="Day">M-W-F</td>
+                        <td class="col-time" data-label="Time">6:00 PM – 7:00 PM</td>
+                        <td class="col-course" data-label="Subject">SOFTWARE ENGINEERING 2</td>
+                        <td class="col-prof" data-label="Instructor">Prof. Catama</td>
+                        <td class="col-link" data-label="Link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
                                 <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <tr class="schedule-item mwf">
-                        <td class="col-day">M-W-F</td>
-                        <td class="col-time">7:00 PM – 8:00 PM</td>
-                        <td class="col-course">GRAPHICS & VISUAL COMPUTING</td>
-                        <td class="col-prof">Prof. Catama</td>
-                        <td class="col-link">
+                    <tr class="schedule-item mwf" id="gvc-row">
+                        <td class="col-day" data-label="Day">M-W-F</td>
+                        <td class="col-time" data-label="Time">7:00 PM – 8:00 PM</td>
+                        <td class="col-course" data-label="Subject">GRAPHICS & VISUAL COMPUTING</td>
+                        <td class="col-prof" data-label="Instructor">Prof. Catama</td>
+                        <td class="col-link" data-label="Link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
                                 <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <tr class="schedule-item mwf">
-                        <td class="col-day">M-W-F</td>
-                        <td class="col-time">8:00 PM – 9:00 PM</td>
-                        <td class="col-course">HUMAN COMPUTER INTERACTION</td>
-                        <td class="col-prof">Prof. Pastera</td>
-                        <td class="col-link">
+                    <tr class="schedule-item mwf" id="hci-row">
+                        <td class="col-day" data-label="Day">M-W-F</td>
+                        <td class="col-time" data-label="Time">8:00 PM – 9:00 PM</td>
+                        <td class="col-course" data-label="Subject">HUMAN COMPUTER INTERACTION</td>
+                        <td class="col-prof" data-label="Instructor">Prof. Pastera</td>
+                        <td class="col-link" data-label="Link">
                             <a href="https://meet.google.com/vzy-sjuv-xpd" target="_blank" class="meet-link">
                                 <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <tr class="schedule-item tth">
-                        <td class="col-day">T-TH</td>
-                        <td class="col-time">6:00 PM – 7:00 PM</td>
-                        <td class="col-course">INFORMATION ASSURANCE & SECURITY</td>
-                        <td class="col-prof">Prof. Catama</td>
-                        <td class="col-link">
+                    <tr class="schedule-item tth" id="ias-row">
+                        <td class="col-day" data-label="Day">T-TH</td>
+                        <td class="col-time" data-label="Time">6:00 PM – 7:00 PM</td>
+                        <td class="col-course" data-label="Subject">INFORMATION ASSURANCE & SECURITY</td>
+                        <td class="col-prof" data-label="Instructor">Prof. Catama</td>
+                        <td class="col-link" data-label="Link">
                             <a href="https://meet.google.com/chu-skvw-zrv" target="_blank" class="meet-link">
                                 <span class="icon svg-meet"></span> Join Meeting
                             </a>
                         </td>
                     </tr>
 
-                    <tr class="schedule-item tth">
-                        <td class="col-day">T-TH</td>
-                        <td class="col-time">7:00 PM – 8:30 PM</td>
-                        <td class="col-course">ARCHITECTURE AND ORGANIZATION</td>
-                        <td class="col-prof">Prof. Carreon</td>
-                        <td class="col-link">
+                    <tr class="schedule-item tth" id="ca-row">
+                        <td class="col-day" data-label="Day">T-TH</td>
+                        <td class="col-time" data-label="Time">7:00 PM – 8:30 PM</td>
+                        <td class="col-course" data-label="Subject">ARCHITECTURE AND ORGANIZATION</td>
+                        <td class="col-prof" data-label="Instructor">Prof. Carreon</td>
+                        <td class="col-link" data-label="Link">
                             <a href="https://classroom.google.com/c/ODIzNzMwODY0OTc0" target="_blank" class="meet-link google-classroom">
                                 <span class="icon svg-classroom"></span> Classroom
                             </a>
                         </td>
                     </tr>
 
-                    <tr class="schedule-item tth">
-                        <td class="col-day">T-TH</td>
-                        <td class="col-time">8:30 PM – 10:00 PM</td>
-                        <td class="col-course">COMPUTATIONAL SCIENCE</td>
-                        <td class="col-prof">Prof. Carreon</td>
-                        <td class="col-link">
+                    <tr class="schedule-item tth" id="cs-row">
+                        <td class="col-day" data-label="Day">T-TH</td>
+                        <td class="col-time" data-label="Time">8:30 PM – 10:00 PM</td>
+                        <td class="col-course" data-label="Subject">COMPUTATIONAL SCIENCE</td>
+                        <td class="col-prof" data-label="Instructor">Prof. Carreon</td>
+                        <td class="col-link" data-label="Link">
                             <a href="https://classroom.google.com/c/ODIwNTM1MTY3OTQ3" target="_blank" class="meet-link google-classroom">
                                 <span class="icon svg-classroom"></span> Classroom
                             </a>
@@ -113,7 +113,7 @@
         </main>
 
         <footer class="schedule-footer">
-            <p class="note">Developed by <a href="https://www.facebook.com/kaheldev" target="_blank" class="footer-link">kaheldev</a></p>
+            <p class="note">developed by <a href="https://www.facebook.com/kaheldev" target="_blank" class="footer-link">kaheldev</a></p>
         </footer>
 
     </div>
