--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MBC - Evening Class Schedule</title>
+    <title>MBC - Evening Class</title>
     <link rel="stylesheet" href="schd.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="img/mbc_lgoo-removebg-preview.png">
@@ -121,3 +121,4 @@
     <script src="schd.js"></script>
 </body>
 </html>
+
