--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <button id="close-modal-btn" class="close-button">&times;</button>
             <h2 class="modal-title">Joining a Google Classroom</h2>
             <div class="tutorial-steps">
-                <p>For subjects with a <strong>Google Classroom</strong> link, you can join using the **Class Link** or the **Class Code**.</p>
+                <p>For subjects with a <strong>Google Classroom</strong> link, you can join using the Class Link or the Class Code.</p>
                 <ol>
                     <li>Sign in to your <strong>Google Account</strong> (preferably your student account).</li>
                     <li>Go to <a href="https://classroom.google.com/" target="_blank">classroom.google.com</a>.</li>
@@ -147,3 +147,4 @@
     <script src="schd.js"></script>
 </body>
 </html>
+
